Fixes yet another deadlock involving StunClientTransaction#cancel(boolean). Reported by Carl Hasselskog.